--- a/chekoutpage.html
+++ b/chekoutpage.html
@@ -107,7 +107,7 @@
             
                                 <div class="offcanvas-body">
                                     <ul class="navbar-nav text-uppercase p-0">
-                                        <li class="nav-item"><a href="shop.html"
+                                        <li class="nav-item"><a href="index.html"
                                                 class="nav-link ms-lg-5 ms-1 text-light py-4">Home</a></li>
                                         <li class="nav-item"><a href=""
                                                 class="nav-link ms-lg-5 ms-1 text-light py-4">Shop</a></li>
